Use -fno-warn-type-defaults and eliminate explicit Int types during exponentiation

--- a/async-timer.cabal
+++ b/async-timer.cabal
@@ -23,7 +23,7 @@ library
                      , classy-prelude
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
-  ghc-options:         -Wall
+  ghc-options:         -Wall -fno-warn-type-defaults
 
 test-suite async-timer-test
   type:                exitcode-stdio-1.0
