--- a/async-timer.cabal
+++ b/async-timer.cabal
@@ -1,5 +1,5 @@
 name:                async-timer
-version:             0.1.3.1
+version:             0.1.4.0
 synopsis:            Provides API for timer based execution of IO actions
 description:         This is a lightweight package built on top of the async package
                      providing easy to use periodic timers. This can be used for executing
@@ -9,7 +9,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Moritz Schulte
 maintainer:          mtesseract@silverratio.net
-copyright:           2016, 2017 Moritz Schulte
+copyright:           (c) 2016-2017 Moritz Schulte
 category:            Concurrency
 build-type:          Simple
 extra-source-files:  README.md
@@ -20,10 +20,12 @@ library
   exposed-modules:     Control.Concurrent.Async.Timer
                      , Control.Concurrent.Async.Timer.Unsafe
   other-modules:       Control.Concurrent.Async.Timer.Internal
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.9.1.0 && < 5
                      , lifted-base >= 0.2.3.11 && < 0.3
                      , lifted-async >= 0.9.1.1 && < 0.10
                      , monad-control >= 1.0.1.0 && < 1.1
+                     , safe-exceptions >= 0.1.5.0 && < 0.2
+                     , transformers-base >= 0.4.4 && < 0.5
   default-language:    Haskell2010
   ghc-options:         -Wall -fno-warn-type-defaults
 
